carrito de compras

--- a/src/app/core/components/shop-cart/shop-cart.component.html
+++ b/src/app/core/components/shop-cart/shop-cart.component.html
@@ -42,11 +42,11 @@
                   
                   <td class="text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="btn btn-icon btn-soft-primary minus">-</button>
-                    <input min="0" name="quantity" value="7" type="number"
-                      class="btn btn-icon btn-soft-primary qty-btn quantity m-1">
+                      class="">-</button>
+                    <input min="0" name="quantity" value="1" type="number"
+                      class="qty-btn quantity m-1">
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="btn btn-icon btn-soft-primary plus">+</button>
+                      class="">+</button>
                   </td>
                   <td class="text-center fw-bold">$510.00</td>
                 </tr>
@@ -68,11 +68,11 @@
                   
                   <td class="text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="btn btn-icon btn-soft-primary minus">-</button>
-                    <input min="0" name="quantity" value="7" type="number"
-                      class="btn btn-icon btn-soft-primary qty-btn quantity m-1">
+                      class="">-</button>
+                    <input min="0" name="quantity" value="1" type="number"
+                      class="qty-btn quantity m-1">
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="btn btn-icon btn-soft-primary plus">+</button>
+                      class="">+</button>
                   </td>
                   <td class="text-center fw-bold">$510.00</td>
                 </tr>
