--- a/src/app/detail-two/detail-two.component.html
+++ b/src/app/detail-two/detail-two.component.html
@@ -22,7 +22,7 @@
       </div>
        end row-->
 
-      <div id="grid" class="row">
+      <div id="grid" class="porta row">
           <div class="col-lg-8 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]' 
               *ngFor="let item of filteredImages">
                   
