--- a/src/app/core/components/shop-cart/shop-cart.component.html
+++ b/src/app/core/components/shop-cart/shop-cart.component.html
@@ -39,14 +39,13 @@
                     </div>
                  
                   </td>
-                  
-                  <td class="text-center qty-icons" >
+                  <td class=" text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="">-</button>
+                      class="colorBoton">-</button>
                     <input min="0" name="quantity" value="1" type="number"
                       class="qty-btn quantity m-1">
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="">+</button>
+                      class="colorBoton">+</button>
                   </td>
                   <td class="text-center fw-bold">$510.00</td>
                 </tr>
@@ -66,13 +65,13 @@
                  
                   </td>
                   
-                  <td class="text-center qty-icons" >
+                  <td class=" text-center qty-icons" >
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                      class="">-</button>
+                      class="colorBoton">-</button>
                     <input min="0" name="quantity" value="1" type="number"
                       class="qty-btn quantity m-1">
                     <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                      class="">+</button>
+                      class="colorBoton">+</button>
                   </td>
                   <td class="text-center fw-bold">$510.00</td>
                 </tr>
