--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -208,13 +208,13 @@
 
                           </div>
                           <tr class="shop-list" >
-                            <td class="text-center qty-icons" >
+                            <td class=" text-center qty-icons" >
                               <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                                class="">-</button>
+                                class="colorBoton">-</button>
                               <input min="0" name="quantity" value="1" type="number"
                                 class="qty-btn quantity m-1">
                               <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                                class="">+</button>
+                                class="colorBoton">+</button>
                             </td>
                           </tr>
 
