--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -187,6 +187,7 @@
                   </li>
                  </ul>
                   <ul class="buy-button list-inline mb-0" >
+                    <!--
                     <li  style="font-family: 'PPEiko-Medium' !important;" class=" list-inline-item mb-0 pe-1">
                       <div class="dropdown" ngbDropdown>
                         <a href="" class="rounded">
@@ -204,8 +205,6 @@
                                 <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">$320</p>
                               </div>
                             </a>
-            
-
                           </div>
                           <tr class="shop-list" >
                             <td class=" text-center qty-icons" >
@@ -232,7 +231,50 @@
                         </div>
                       </div>
                     </li>
-            
+                  -->
+                  <li  style="font-family: 'PPEiko-Medium' !important;" class=" list-inline-item mb-0 pe-1">
+                    <div class="dropdown" ngbDropdown>
+                      <a href="" class="rounded">
+                      </a>
+                      <img  src="assets/images/work/carrito.png" alt= "image" width= "20" height="19" class="dropdown-toggle" ngbDropdownToggle data-bs-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                      <div class="dropdown-menu dd-menu dropdown-menu-end bg-white shadow rounded border-0 mt-3 p-4" ngbDropdownMenu
+                        style="width: 300px;">
+                        <div *ngFor="let product of products; let i=index" class="pb-4">
+                          <a href="javascript:void(0)" class="d-flex align-items-center">
+                            <img src="assets/images/p4.jpg" width="100" height="150"  class=""  >
+                            <div  class="flex-1 text-start ms-3">
+                              <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;" > {{product.nombre}} </h6>
+                              <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">Información {{i}}</p>
+                              <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">${{product.precio}}</p>
+                            </div>
+                          </a>
+                        </div>
+                        <tr class="shop-list" >
+                          <td class=" text-center qty-icons" >
+                            <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+                              class="colorBoton">-</button>
+                            <input min="0" name="quantity" value="1" type="number"
+                              class="qty-btn quantity m-1">
+                            <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+                              class="colorBoton">+</button>
+                          </td>
+                        </tr>
+
+                        <div class="d-flex align-items-center justify-content-between pt-4 border-top">
+                          <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">Total($):</h6>
+                          <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">$1690</h6>
+                        </div>
+          
+                        <div class="mt-3 text-center">
+                          <a class="botones" routerLink="/shop-cart" style= "color: black;" >Go to Cart</a>
+                          <a class="botones" routerLink="/shop-checkouts" style= "color: black;" >Check Out</a>
+                          
+                        </div>
+                       
+                      </div>
+                    </div>
+                  </li>
                     <ng-template #content>
                       <div class="modal-content rounded shadow-lg border-0 overflow-hidden" >
                         <div class="modal-body py-5">
