--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -187,6 +187,51 @@
                   </li>
                  </ul>
                   <ul class="buy-button list-inline mb-0" >
+                    <!--
+                    <li  style="font-family: 'PPEiko-Medium' !important;" class=" list-inline-item mb-0 pe-1">
+                      <div class="dropdown" ngbDropdown>
+                        <a href="" class="rounded">
+                        </a>
+                        <img  src="assets/images/work/carrito.png" alt= "image" width= "20" height="19" class="dropdown-toggle" ngbDropdownToggle data-bs-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu dd-menu dropdown-menu-end bg-white shadow rounded border-0 mt-3 p-4" ngbDropdownMenu
+                          style="width: 300px;">
+                          <div class="pb-4">
+                            <a href="javascript:void(0)" class="d-flex align-items-center">
+                              <img src="assets/images/p4.jpg" width="100" height="150"  class=""  >
+                              <div  class="flex-1 text-start ms-3">
+                                <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;" >T-shirt </h6>
+                                <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">Información</p>
+                                <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">$320</p>
+                              </div>
+                            </a>
+                          </div>
+                          <tr class="shop-list" >
+                            <td class=" text-center qty-icons" >
+                              <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+                                class="colorBoton">-</button>
+                              <input min="0" name="quantity" value="1" type="number"
+                                class="qty-btn quantity m-1">
+                              <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+                                class="colorBoton">+</button>
+                            </td>
+                          </tr>
+
+                          <div class="d-flex align-items-center justify-content-between pt-4 border-top">
+                            <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">Total($):</h6>
+                            <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">$1690</h6>
+                          </div>
+            
+                          <div class="mt-3 text-center">
+                            <a class="botones" routerLink="/shop-cart" style= "color: black;" >Go to Cart</a>
+                            <a class="botones" routerLink="/shop-checkouts" style= "color: black;" >Check Out</a>
+                            
+                          </div>
+                         
+                        </div>
+                      </div>
+                    </li>
+                  -->
                   <li  style="font-family: 'PPEiko-Medium' !important;" class=" list-inline-item mb-0 pe-1">
                     <div class="dropdown" ngbDropdown>
                       <a href="" class="rounded">
@@ -204,16 +249,17 @@
                               <p class="text-muted mb-0" style="font-family: 'PPEiko-thin' !important;">${{product.precio}}</p>
                             </div>
                           </a>
-                          <tr class="shop-list" >
-                            <td class=" text-center qty-icons" >
-                              <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                                class="colorBoton">-</button>
-                              <input min="0" name="quantity" value="1" type="number"
-                                class="qty-btn quantity m-1">
-                              <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                                class="colorBoton">+</button>
-                            </td>
-                          </tr>
+                          
+                        <tr class="shop-list" >
+                          <td class=" text-center qty-icons" >
+                            <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
+                              class="colorBoton">-</button>
+                            <input min="0" name="quantity" value="1" type="number"
+                              class="qty-btn quantity m-1">
+                            <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
+                              class="colorBoton">+</button>
+                          </td>
+                        </tr>
                         </div>
                         <div class="d-flex align-items-center justify-content-between pt-4 border-top">
                           <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">Total($):</h6>
@@ -248,9 +294,70 @@
                         </div>
                       </div>
                     </ng-template>
+            
                   </ul>
+            
               </ul>
+              
             </div>
+  
+             
+                <!--  <li class="has-submenu">
+                      <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">PRODUCTS</a><span class="menu-arrow"></span>
+                      <ul class="submenu">
+                          <div class="main-content color1" >
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: white !important;" routerLink="/">MATERSANT</a>
+                          </li>
+                          </div>
+                          <div class="main-content color2" >
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: white!important;"  routerLink="/">MATERIA CURADA</a>
+                          </li>
+                      </div>
+                      <div class="main-content color3" >
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: white !important;"  routerLink="/">THE ISSUE</a>
+                          </li>
+                      </div>
+                      <div class="main-content color4" >
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: white !important;" routerLink="/">ALL</a>
+                          </li>
+                      </div>
+                      </ul>
+                  </li> -->
+  
+                  
+               <!--    <li class="has-submenu">
+                      <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">ARCHIVE</a><span class="menu-arrow"></span>
+                      <ul class="submenu">
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: #6A1B9A !important;" routerLink="/">2018</a>   
+                          </li>
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: #2E7D32!important;" routerLink="/">2019</a>
+                          </li>
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: #00838F !important;" routerLink="/">2020</a>
+                          </li>
+                          <li class="nav-link-ref">
+                              <a href="javascript:void(0)" style="color: #D84315 !important;" routerLink="/">2021</a>
+                          </li>
+                      </ul>
+                  </li> 
+                 <!--  <li class="nav-link-ref">
+                      <a href="javascript:void(0)"   routerLink="/aboutus">ABOUT</a>
+                  </li>-->
+             
+             
+            
+              <!--end navigation menu-->
+              <!-- <div class="buy-menu-btn d-none">
+                  <a href="javascript: void(0);" target="_blank" class="btn btn-primary">Buy Now</a>
+              </div> -->
+              <!--end login button-->
+              <!--end login button-->
           </div>
           <!--end navigation-->
       </div>
